--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
-  "functions": {
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build"
+    }
+  ]
 }
