--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,6 @@
       "src": "package.json",
       "use": "@vercel/static-build"
     }
-  ]
+  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
